[gd_scene load_steps=10 format=3 uid="uid://dgeith80qu7og"]

[ext_resource type="Script" path="res://Scripts/game_over.gd" id="1_dwp6i"]
[ext_resource type="Texture2D" uid="uid://4yndhxgobnhe" path="res://Assets/UI/Win.png" id="2_tgycn"]
[ext_resource type="Texture2D" uid="uid://c6eed4njgeovy" path="res://Assets/UI/menu.png" id="3_bm1mg"]
[ext_resource type="Texture2D" uid="uid://c3o31g52pyw3x" path="res://Assets/UI/restart.png" id="4_gisgw"]
[ext_resource type="Texture2D" uid="uid://dgrb8nnueggsm" path="res://Assets/UI/play.png" id="5_6o8ia"]

[sub_resource type="Animation" id="Animation_th7fl"]
resource_name = "FadeStart"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_en8rd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.2, 0.2)]
}

[sub_resource type="Animation" id="Animation_bnqu4"]
resource_name = "ZoomIt"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.1, 0.133333, 0.166667, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.2, 0.2), Vector2(1, 1), Vector2(1.5, 1.5), Vector2(2, 2), Vector2(1.5, 1.5), Vector2(2, 2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x8foy"]
_data = {
"FadeStart": SubResource("Animation_th7fl"),
"RESET": SubResource("Animation_en8rd"),
"ZoomIt": SubResource("Animation_bnqu4")
}

[node name="GameWin" type="CanvasLayer"]
script = ExtResource("1_dwp6i")

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.314127, 0.515978, 0.410801, 0.92549)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_x8foy")
}

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
offset_left = 519.0
offset_top = 192.0
offset_right = 1069.0
offset_bottom = 319.0
scale = Vector2(0.2, 0.2)
pivot_offset = Vector2(275, 65)
texture = ExtResource("2_tgycn")

[node name="TextureButtonMenu" type="TextureButton" parent="."]
offset_left = 492.0
offset_top = 459.0
offset_right = 642.0
offset_bottom = 634.0
texture_normal = ExtResource("3_bm1mg")
ignore_texture_size = true
stretch_mode = 5

[node name="TextureButtonRestart" type="TextureButton" parent="."]
offset_left = 726.0
offset_top = 465.0
offset_right = 876.0
offset_bottom = 640.0
texture_normal = ExtResource("4_gisgw")
ignore_texture_size = true
stretch_mode = 5

[node name="TextureButtonNext" type="TextureButton" parent="."]
offset_left = 960.0
offset_top = 465.0
offset_right = 1110.0
offset_bottom = 640.0
texture_normal = ExtResource("5_6o8ia")
ignore_texture_size = true
stretch_mode = 5

[connection signal="pressed" from="TextureButtonMenu" to="." method="_on_texture_button_menu_pressed"]
[connection signal="pressed" from="TextureButtonRestart" to="." method="_on_texture_button_restart_pressed"]
[connection signal="pressed" from="TextureButtonNext" to="." method="_on_texture_button_next_pressed"]
